Fix: optimize imports and reformat code